# database-layer

./: .env  .gitattributes  .gitignore  .prettierignore  .tool-versions  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  jest.config-pacts.js  package.json  sqlx-data.json  tsconfig.json
.github/: dependabot.yml  wait-for-mysql.sh  wait-for-server.sh
.sqlx/: query-01614e712579031ca16ed14cd5fad807daa8d962e008ef205903c15e0fe4bd34.json  query-01ec0b909247a28fa877dbb37da8db45610b8d2b460d68a429ca12919e5a2737.json  query-04374dc0d810b4adf803ce463caca688f6a003b47ab1fa770e20c02ed2db3bee.json  query-0450d413feb24d5c285f016ff504d889c14a280eb2628bd6b6ff2a0cf3a1c722.json  query-04912efa922c870efb5268ef2a98a82dfa657b084a50c91b89031388c514de65.json  query-0506200225b8369dc438105b84d6392436f35763e649cca51850ceb286130d53.json  query-0775fb20c50e22a43297a12e8959dc4e6c7527a64d40dfbe885f616acf252865.json  query-078426a1dc666919236049dc4916711c422d20a7feda98ab4213a28481d5f104.json  query-0808f2c95236d428e205e0d3e53ca5c31022993e560b6b840811881bc32202bc.json  query-087de49532815f597533c0290b45d460ddd5e51651ddcc06180188d4ec1a5979.json  query-09586377ef61fbcf28391e74369b929a815f98b50af8bba179cf14d9858bd196.json  query-09965570050adbd7f9f7b6e158a1b5e95d13eab605d25b207bc9898dd9a6fe47.json  query-0a2a6e879255cafcdf12a622ef1eee2529c70b55d325ac864078dd2e7b2cc354.json  query-0eca65d1eb3fe8686ef46df2f9fad9cfb0fa44f786d09043609fb1a6a411fbf5.json  query-0eeb0ce674433e953c3c6960cda24b7acc424b9e7552588556694f30a0d57a9e.json  query-0f7ddd3073657eb646caeed7f49e8ff4592d21b27f46fc8921f60ff0d6107930.json  query-11c560f337c6a4ca59e32c1dd320227d75c147ee023ecaab8bcad6135d4d5d46.json  query-12ed467d6c81bc00bddc5a10220b65925488fc0521f1e62a81308d2296a961fe.json  query-18f96cb5e1963dc7b94c2aeff658400d04d2b8c5d65aa529041cb4f715f6bef3.json  query-1d29fa3ec059188475b89dd62c131002f744586b21ee747a9fbac8a705b218f7.json  query-1d4ecbf8ff61c9aba3c70729c5c0baf459cda208f7ec9e0540a9f443c6e7e1e4.json  query-1e05f195896b4e74b300b4c2de7de8ab86075741378e50fb277bf16a7a7f83c9.json  query-1e8fce1e13613ff5b44d4ea609965460a19ef5dcad9401aded5e43747325bee4.json  query-1ee1dd9cee6adc4c510cd46ae79e143e8b04f696bd68b41a6e55871c64ecbf23.json  query-1f97648096e571eb7285984b0c35d6e108a059dc483463142c7fbd1984e886f0.json  query-21217736c5678117cb512824386f3368c1a0920e88b41b78655039038c2cdb6c.json  query-21cb0c08e0fb1f84ccc2ad3175467fdcb06a4f8dfa6f12c367567c70fadbdd33.json  query-21f5c0aa5d0396ca36c1bbc9336451e907c45741d14080689df803e503da9af1.json  query-2594f7eb0db4993eb684ae6fdf173a8999df485653a8544733a6ce29da94842d.json  query-25e8a1f49798548f80da67121db5fe6feb87263196b0032d960443d1fedd828e.json  query-271558d418af8bdae217671bb5601adb4311b575eef5fdb623af7d72dd4ab619.json  query-281acbea5bb6f6c8db1f93b28161ac9526e53a9f1d7c419c27980e7900ef6d40.json  query-2b20b8721b218b0e08cfa2ba1f1a769e6e0ae366d6430b09202f56422df5a83b.json  query-2b34c5a1d2b6d04cb9bbbf5777daf02acc00c15dacb0f26ce3edf473b6759aa1.json  query-2b40b2053d2083dbdc2ba4229260ef613c0b10e606099d083ffe75dc2117e4ac.json  query-2b6628debe91dbe22e806e5070eabee80cc3190251ce4127043973189b0aec3b.json  query-2b6ec5c00b9a7582627eeca1631bb965cb7a15f1dc14dc159d2e329d5896887b.json  query-2cfe0f4498a487a637ea1cb30708575d034c365423432ae23a167bc33ca248a0.json  query-2d56e98815019139bf468a2af929eccd4cbaa88d6a1bf8fb4786391526c85736.json  (+137 more)
mysql/: README.md  (+2 more)
server/: Cargo.toml
server/benches/: query_entity_metadata.rs
server/src/: database.rs  datetime.rs  instance.rs  lib.rs  main.rs  message.rs  metadata.rs  notification.rs  operation.rs  routes.rs  subject.rs  thread.rs
server/src/alias/: messages.rs  model.rs
server/src/event/: messages.rs  mod.rs
server/src/event/model/: abstract_event.rs  create_comment.rs  create_entity.rs  create_entity_revision.rs  create_taxonomy_link.rs  create_taxonomy_term.rs  create_thread.rs  entity_link.rs  event.rs  event_type.rs  mod.rs  remove_taxonomy_link.rs  revision.rs  set_license.rs  set_taxonomy_parent.rs  set_taxonomy_term.rs  set_thread_state.rs  set_uuid_state.rs
server/src/license/: messages.rs  mod.rs  model.rs
server/src/metadata/: messages.rs  mod.rs  model.rs
server/src/navigation/: messages.rs
server/src/navigation/model/: mod.rs  navigation.rs  navigation_child.rs
server/src/notification/: messages.rs  model.rs
server/src/subject/: messages.rs  mod.rs  model.rs
server/src/subscription/: messages.rs  model.rs
server/src/thread/: messages.rs  mod.rs  model.rs
server/src/user/: messages.rs  model.rs
server/src/uuid/: messages.rs
server/src/uuid/model/: attachment.rs  blog_post.rs  comment.rs  discriminator.rs  mod.rs  page_revision.rs  taxonomy_term.rs  user.rs  uuid.rs
server/src/uuid/model/entity/: abstract_entity.rs  entity_type.rs  messages.rs  mod.rs
server/src/uuid/model/entity_revision/: abstract_entity_revision.rs  article_revision.rs  course_revision.rs  exercise_group_revision.rs  mod.rs  video_revision.rs
server/src/uuid/model/page/: messages.rs  mod.rs
server/src/uuid/model/taxonomy_term/: messages.rs  mod.rs
server/src/vocabulary/: messages.rs  mod.rs  model.rs
server/tests/: entity.rs  events.rs  metadata.rs  navigation.rs  page.rs  set-uuid-state.rs  subject.rs  taxonomy_term.rs  thread.rs  user.rs  uuid.rs
server/tests/integration/: entity.rs  page.rs  subject.rs  taxonomy_term.rs  thread.rs  user.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
(+175 files in other folders)
