[package]
name = "database-layer-actix"
version = "0.1.4"
authors = ["Serlo Education e.V."]
edition = "2018"

[dependencies]
actix-web = "3.0.0"
anyhow = "1.0.0"
chrono = "0.4.0"
chrono-tz = "0.5.0"
convert_case = "0.4.0"
dotenv = "0.15.0"
futures = "0.3.0"
regex = "1.0.0"
serde = "1.0.0"
serde_json = "1.0.0"
sqlx = { version = "0.4.0", features = [ "chrono", "mysql", "runtime-actix-native-tls"] }
thiserror = "1.0.0"
