[package]
name = "server"
version = "0.3.79"
authors = ["Serlo Education e.V."]
license = "Apache-2.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-service = "2.0.2"
actix-web = "4.8.0"
async-trait = "0.1.81"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "~0.9.0"
convert_case = "~0.6.0"
dotenv = "0.15.0"
enum_dispatch = "0.3.13"
futures = "0.3.30"
itertools = "~0.13.0"
md5 = "0.7.0"
rand = "0.8.5"
regex = "1.10.5"
sentry = "~0.34.0"
sentry-actix = "~0.34.0"
serde = "1.0.203"
serde_json = "1.0.120"
sophia = "0.8.0"
sqlx = { version = "~0.7.3", features = ["chrono", "json", "mysql", "runtime-tokio-native-tls"] }
thiserror = "1.0.61"

[dev-dependencies]
criterion = { version = "~0.5.1", features = ["html_reports", "async"] }
rstest = "~0.21.0"
test-utils = { path="../test-utils" }

[[bench]]
name = "query_entity_metadata"
harness = false
