[package]
name = "test-utils"
version = "0.1.0"
authors = ["Serlo Education e.V."]
license = "Apache-2.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false
doc = false

[dependencies]
actix-web = "4.0.0"
rand = "0.8.0"
serde_json = "1.0.0"
server = { path="../server" }
sqlx = { version = "0.5.0", features = ["chrono", "offline", "json", "mysql", "runtime-actix-native-tls"] }
