[package]
name = "test-utils"
version = "0.1.0"
authors = ["Serlo Education e.V."]
license = "Apache-2.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false
doc = false

[dependencies]
actix-web = "4.4.0"
assert-json-diff = "2.0.2"
convert_case = "~0.6.0"
pretty_assertions = "1.4.0"
rand = "0.8.5"
serde_json = "1.0.105"
server = { path="../server" }
sqlx = { version = "~0.7.0", features = ["chrono", "json", "mysql", "runtime-tokio-native-tls"] }
